stylesheet.css
.flex {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
  }
  .flex-Invis{
      display:flex;
  }
.flex-container{
    display: flex;
    justify-content: center;
    align-items: center
}
.flex-submit{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}
.flex-Summary{
    display: flex;
    justify-content: flex-start
}
#container {
    background-color: lightskyblue;
    color: white;
    width: 600px;
    height: 750px;
    margin: auto;
    border-radius: 10px;
    justify-content: center

  }
#text-field{
    border-radius:10px;
    height:20px;
    margin-bottom:10px
}
#BoulderResultsContainer{
    background-color:black;
    color: rgb(0, 0, 0);
    width: 400px;
    height: 70px;
    border-radius: 10px;
    margin:5px;
    line-height: 15px;
    font-family: courier
}
#BoulderResultsContainerLeft{
    background-color:Black;
    color: White;
    width: 130px;
    height: 70px;
    border-radius: 10px;
    line-height: 15px;
    font-family: courier
}
#BoulderResultsContainerRight{
    background-color:white;
    color: White;
    width: 270px;
    height: 70px;
    border-radius: 10px;
    line-height: 15px;
    font-family: courier
}
#ResultTopContainer{
    background-color: rgb(14, 245, 33);
    color: white;
    width: 400px;
    height: 100px;
    border-radius: 10px;
    justify-content: center
}
#SummaryContainer{
    background-color: rgb(122, 14, 245);
    color: white;
    width: 400px;
    height: 150px;
    border-radius: 10px;
    margin-bottom: 5px;
}
#SummaryContainerLeft{
    background-color: rgb(122, 14, 245);
    color: white;
    width: 100px;
    height: 60px;
    border-radius: 10px;
    margin-bottom: 5px;
    justify-content: center;
    align-content: center;
}
#SummaryContainerRight{
    background-color: rgb(122, 14, 245);
    color: white;
    width: 300px;
    height: 120px;
    border-radius: 10px;
    margin-left: 10px;
    margin-top:10px;
    justify-content: center;
    align-content: center;
    font-family: courier
}
#ResultBotContainer{
    background-color: rgb(245, 14, 26);
    color: white;
    width: 400px;
    height: 100px;
    border-radius: 10px;
    justify-content: center
}
#InvisibleContainer{
    width: 400px;
    height: 170px;
    font-size: 25px;
    border-radius: 10px;
    margin-bottom: 5px
}
#InvisConLeft1{
    width: 200px;
    height: 170px;
    font-size: 22.5px;
    justify-content: center;
}
#InvisConLeft2{
    width: 200px;
    height: 170px;
    font-size: 22.5px;
    justify-content: center;
}
#InvisConRight1{
    width: 200px;
    height: 170px;
    font-size: 22.5px;
    justify-content: center;
}
#InvisConRight2{
    width: 200px;
    height: 170px;
    font-size: 22.5px;
    justify-content: center;
}
#bot-box{ 
    background: rgba(15, 186, 183, 0.9);
    width: 100px;
    height: 100px;
    border-radius: 5px;
    margin: 50px;
}
#top-box{
    background: rgba(15, 186, 183, 0.9);
    width: 250px;
    height: 150px;
    border-radius: 5px;
    margin: 20px;
    font-family: courier;
    font-size: 16px;
    line-height:2px;
}
.button {
    margin: 50px;
    font-size: 25px;
    line-height: 30px;
    padding: 20px;
    background: salmon;
    border-radius: 5px;
    font-family: 'Courier';
    transition: all 0.5s;
    cursor: pointer;
}
.button span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
  }
.button span:after {
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
    transition: 0.5s;
}
.button:hover span {
    padding-right: 25px;
}
.button:hover span:after {
    opacity: 1;
    right: 0;
}
#inner-up-Box{
    background: black;
    width: 400px;
    height: 75px;
    border-radius: 5px;
    font-family: courier;
    font-size: 16px;
}
#innerBox{
    background: black;
    width: 400px;
    height: 75px;
}
#header{
    width: 600px;
    height: 70px;
    margin-bottom: 10px;
}
#BackButtonContainer{
    width:95px;
    height:35px;
}
.BackButton{
    width:90px;
    height:60px;
    font-family: 'Courier';
    font-size: 16px;
    margin-top:10px;
    margin-left:5px;
    background: salmon;
    border-radius: 5px;
    transition: all 0.5s;
    cursor: pointer;
}
.BackButton span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
}

.BackButton span:after {
    content: '\0ab';
    position: absolute;
    opacity: 0;
    top: 0;
    left: -20px;
    transition: 0.5s;
}

.BackButton:hover span {
    padding-left: 25px;
}

.BackButton:hover span:after {
    opacity: 1;
    right: 0;
}

